<resources>
    <string name="app_name">NUMAD21Su-OsmanSubasi</string>
    <string name="about_string">About</string>
    <string name="info_text" />
    <string name="name_string">Osman Subasi</string>
    <string name="email_string">subasi.o@northeastern.edu</string>
    <string name="newActivityBtn">Press Me</string>
    <string name="btnF">F</string>
    <string name="btnE">E</string>
    <string name="btnC">C</string>
    <string name="btnB">B</string>
    <string name="btnA">A</string>
    <string name="btnD">D</string>
    <string name="pressText">Pressed:</string>
    <string name="linkCollector">Link Collector</string>
    <string name="add_item">add item</string>
    <string name="item_name">Item name</string>
    <string name="item_description">Description</string>
    <string name="description">This image acts as an icon.</string>
    <string name="infoTextUserInput">You are about add a link to your list</string>
    <string name="urlName">Name</string>
    <string name="url">URL</string>
    <string name="linkAddBtn">Add</string>
    <string name="name_placeholder">Name</string>
    <string name="url_placeholder">URL</string>
    <string name="deviceLocation">Device Location</string>
    <string name="latitudeText">Searching latitude…</string>
    <string name="longitudeText">Searching longitude…</string>
    <string name="longLabel">Logitude:</string>
    <string name="latLabel">Latitude:</string>

    <string name="submitBtn">submit</string>
    <string name="infoText">To see movies and their release date, please select an option</string>
    <string name="atYourServiceBtn">At Your Service</string>
    <string-array name="movie_choices">
        <item>Now Playing</item>
        <item>Popular</item>
        <item>Upcoming</item>
    </string-array>


</resources>